--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-/*
-/*/
-!.gitignore
-!README.md
-!LICENSE
-!setup.py
-!setup.cfg
-!main.py
-!pycheckwatt/
-**/__pycache__/
+dist/
+__pycache__/
+pipx_shared.pth
