--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "pycheckwatt"
 version = "0.1.0"
-description = "Get values from Checkwatts api for EIB"
-authors = ["Marcus Carlsson <marcus.karlsson@usa.net>, Anders Yderborg <anders.yderborg@gmail.com>, Daniel Nilsson <danielnilsson79@hotmail.com>"]
+description = "Read data from CheckWatts EnergyInBalance WEB API"
+authors = ["Marcus Karlsson <marcus.karlsson@usa.net>, Anders Yderborg <anders.yderborg@gmail.com>, Daniel Nilsson <danielnilsson79@hotmail.com>"]
 license = "MIT License"
 readme = "README.md"
 
