--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ include = [
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
+aiohttp = "^3.9.1"
+python-dateutil = "^2.8.2"
 
 [build-system]
 requires = ["poetry-core"]
