--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [tool.poetry]
 name = "pycheckwatt"
-version = "0.1.3"
+version = "0.1.4"
 description = "Read data from CheckWatts EnergyInBalance WEB API"
 authors = ["Marcus Karlsson <macke.karlsson@gmail.com>", "Anders Yderborg <anders.yderborg@gmail.com>", "Daniel Nilsson <danielnilsson79@hotmail.com>"]
 license = "MIT License"
 readme = "README.md"
 
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
