--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -28,7 +28,7 @@ jobs:
         uses: wearerequired/lint-action@v2
         with:
           black: true
-          black_auto_fix: false
+          black_auto_fix: true
           flake8: true
           flake8_auto_fix: false
 
