--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Run linters
         uses: wearerequired/lint-action@v2
         with:
+          auto_fix: true
           black: true
           black_auto_fix: true
           flake8: true
