--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,15 +1,11 @@
 FROM python:3.11-slim
 
 WORKDIR /app
-# Dependencies
+# Install all dependencies (including dev)
 RUN pip install --no-cache-dir poetry
 COPY pyproject.toml poetry.lock ./
-
 RUN poetry config virtualenvs.create false \
-    && poetry install --only main --no-root --no-interaction --no-ansi
-
-# Dev dependencies
-RUN pip install black flake8
+    && poetry install --no-root --no-interaction --no-ansi
 
 ENV PYTHONPATH="${PYTHONPATH}:/app"
 
