--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,36 @@ python = ">=3.10,<3.13"
 aiohttp = "^3.9.1"
 python-dateutil = "^2.8.2"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "~=8.4.0"
+pytest-asyncio = "~=1.1.0"
+pytest-mock = "~=3.14.0"
+responses = "~=0.25.0"
+aioresponses = "~=0.7.0"
+black = "~=25.1.0"
+flake8 = "~=7.3.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+asyncio_mode = "auto"
+markers = [
+    "unit: Unit tests that mock external calls",
+    "characterization: Tests that document current behavior"
+]
+addopts = [
+    "--strict-markers",
+    "--strict-config",
+    "-v",
+    "--tb=short"
+]
+filterwarnings = [
+    "ignore::DeprecationWarning",
+    "ignore::pytest.PytestUnknownMarkWarning"
+]
