Use refresh token and handle 429.

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,7 +1,7 @@
 FROM python:3.11-slim
 
 WORKDIR /app
-# Install all dependencies (including dev)
+# Install all dependencies (including dev) using poetry
 RUN pip install --no-cache-dir poetry
 COPY pyproject.toml poetry.lock ./
 RUN poetry config virtualenvs.create false \
