--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,7 +2,11 @@ FROM python:3.11-slim
 
 WORKDIR /app
 # Dependencies
-RUN pip install aiohttp python-dateutil
+RUN pip install --no-cache-dir poetry
+COPY pyproject.toml poetry.lock ./
+
+RUN poetry config virtualenvs.create false \
+    && poetry install --only main --no-root --no-interaction --no-ansi
 
 # Dev dependencies
 RUN pip install black flake8
