--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,11 @@ python = ">=3.10,<3.13"
 aiohttp = "^3.9.1"
 python-dateutil = "^2.8.2"
 
+[tool.poetry.group.dev.dependencies]
+black = "~=25.1.0"
+flake8 = "~=7.3.0"
+isort = "~=6.0.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
