--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -20,17 +20,18 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install linting dependencies
-        run: |
-          pip install black flake8
+      - name: Set up Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: latest
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+
+      - name: Install dependencies
+        run: poetry install
 
       - name: Run linters
-        uses: wearerequired/lint-action@v2
-        with:
-          auto_fix: true
-          black: true
-          black_auto_fix: true
-          flake8: true
-          flake8_auto_fix: false
-
-      - uses: isort/isort-action@v1.0.0
+        run: |
+          poetry run isort --check-only .
+          poetry run black --check .
+          poetry run flake8 .
