--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -5,6 +5,7 @@ WORKDIR /app
 RUN pip install --no-cache-dir poetry
 COPY pyproject.toml poetry.lock ./
 RUN poetry config virtualenvs.create false \
+    && poetry lock \
     && poetry install --no-root --no-interaction --no-ansi
 
 ENV PYTHONPATH="${PYTHONPATH}:/app"
