--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ include = [
 python = ">=3.10,<3.13"
 aiohttp = "^3.9.1"
 python-dateutil = "^2.8.2"
+aiofiles = ">=23.2.1"
+cryptography = ">=41.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "~=8.4.0"
